--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,28 @@
-flask==2.3.3
-flask-cors==4.0.0
-werkzeug==2.3.7
+Flask==3.0.2
+python-dotenv==1.0.1
+signalwire==2.1.1
+signalwire-swaig==2.7.2
+schedule==1.2.1
+pytz==2024.1
 requests==2.31.0
-signalwire==3.8.0
-swaig==1.0.1
-pillow==10.0.1
-reportlab==4.0.5
-qrcode==7.4.2 
+Werkzeug==3.0.1
+Jinja2==3.1.2
+itsdangerous==2.1.2
+click==8.1.7
+MarkupSafe==2.1.3
+python-dateutil==2.8.2
+Flask-WTF==1.2.1
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.25
+email-validator==2.1.0.post1
+Flask-Login==0.6.3
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.5
+Flask-Session==0.5.0
+Flask-Caching==2.1.0
+Flask-Compress==1.14
+Flask-CORS==4.0.0
+Flask-Limiter==3.5.0
+Flask-Talisman==1.1.0
+gunicorn==21.2.0
+reportlab==4.0.7
